# swagger/swagger.yaml
@@ -12,19 +12,44 @@ definitions:
   v1.CommonParam:
     properties:
       param1:
-        description: param1, max 255 words
+        description: param1, min 10 words and max 255 words
         maxLength: 255
         minLength: 10
         type: string
       param2:
         description: param2, required
         type: string
-      paramEmail:
+      param3:
         description: param3, if it's null, validate nothing. if it's not null, must
           match email regex
         type: string
     required:
     - param2
+    type: object
+  v1.LoginParam:
+    properties:
+      loginName:
+        type: string
+      password:
+        type: string
+    required:
+    - loginName
+    - password
+    type: object
+  v1.RegisterParam:
+    properties:
+      displayName:
+        type: string
+      email:
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+    required:
+    - displayName
+    - email
+    - password
     type: object
 info:
   contact:
@@ -38,7 +63,7 @@ paths:
   /v1/demo/get:
     get:
       parameters:
-      - description: param1, max 255 words
+      - description: param1, min 10 words and max 255 words
         in: query
         maxLength: 255
         minLength: 10
@@ -52,7 +77,7 @@ paths:
       - description: param3, if it's null, validate nothing. if it's not null, must
           match email regex
         in: query
-        name: paramEmail
+        name: param3
         type: string
       responses:
         "200":
@@ -89,6 +114,47 @@ paths:
       summary: System Info
       tags:
       - System API
+  /v1/user/login:
+    post:
+      parameters:
+      - description: login param
+        in: body
+        name: param
+        required: true
+        schema:
+          $ref: '#/definitions/v1.LoginParam'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.ApiJson'
+      tags:
+      - User API
+  /v1/user/me:
+    post:
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.ApiJson'
+      tags:
+      - User API
+  /v1/user/register:
+    post:
+      parameters:
+      - description: register param
+        in: body
+        name: param
+        required: true
+        schema:
+          $ref: '#/definitions/v1.RegisterParam'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.ApiJson'
+      tags:
+      - User API
 produces:
 - application/json
 securityDefinitions:
